[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dm-ai-sim"
version = "0.1.0"
description = "A minimal Duel Masters-like simulator for reinforcement learning experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.26",
    "sb3-contrib>=2.3",
    "stable-baselines3>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["dm_ai_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
